--- a/js.html
+++ b/js.html
@@ -21,6 +21,19 @@
     let height= parseInt( inputheight);
     let area= widgh*height;
     document.write("area= " + area);
+    let inputmaths;
+    let inputphysical;
+    let inputchemistry;
+    inputmaths=prompt("nhập biến maths:");
+    inputphysical=prompt("nhập biến physical:");
+    inputchemistry=prompt("nhập biến chemistry:");
+    let maths= parseInt(inputmaths);
+    let physical= parseInt(inputphysical);
+    let chemistry=parseInt(inputchemistry);
+    let sum=(maths+physical+chemistry);
+    let medium=(sum/3);
+    document.write("sum =" +sum);
+    document.write("medium =" +medium);
 </script>
 </body>
 </html>
