--- a/js.html
+++ b/js.html
@@ -5,35 +5,59 @@
     <title>Title</title>
 </head>
 <body>
+<button onclick="ad();">ấn</button>
 <script>
-    a=prompt("nhập biến a: ")
-    b=prompt("nhập biến b: ")
-    if((a%b)==0)
-    { alert("a chia hết cho b")}
-    else{
-        alert("a không chia hết cho b")
+    // a=prompt("nhập biến a: ")
+    // b=prompt("nhập biến b: ")
+    // if((a%b)==0)
+    // { alert("a chia hết cho b")}
+    // else{
+    //     alert("a không chia hết cho b")
+    // }
+    // let inputwidgh;
+    // let inputheight;
+    // inputwidgh=prompt("nhập biến width:");
+    // inputheight=prompt(" nhập biến height:");
+    // let widgh=parseInt(inputwidgh);
+    // let height= parseInt( inputheight);
+    // let area= widgh*height;
+    // document.write("area= " + area);
+    // let inputmaths;
+    // let inputphysical;
+    // let inputchemistry;
+    // inputmaths=prompt("nhập biến maths:");
+    // inputphysical=prompt("nhập biến physical:");
+    // inputchemistry=prompt("nhập biến chemistry:");
+    // let maths= parseInt(inputmaths);
+    // let physical= parseInt(inputphysical);
+    // let chemistry=parseInt(inputchemistry);
+    // let sum=(maths+physical+chemistry);
+    // let medium=(sum/3);
+    // document.write("sum =" +sum);
+    // document.write("medium =" +medium);
+
+    // // bài 2
+    // let inputc;
+    // inputc=prompt("nhập biến nhiệt độ c");
+    // let c=parseInt( inputc);
+    // let F=((9*c)/5+32);
+    // document.write("F = " +F);
+
+    // bài 3+ 4
+    // let pi=3.14;
+    // let inputD;
+    // let inputR;
+    // inputR=prompt("nhập biến bán kính R");
+    // inputD=prompt("nhập biến đường kính D");
+    // let D=parseInt(inputD);
+    // let R=parseInt(inputR);
+    // let C=3.14*D;
+    // let S=3.14 * R *R;
+    // document.write("S=" +S);
+    // document.write("C= " +C);
+    function a(){
+        console.log('hello');
     }
-    let inputwidgh;
-    let inputheight;
-    inputwidgh=prompt("nhập biến width:");
-    inputheight=prompt(" nhập biến height:");
-    let widgh=parseInt(inputwidgh);
-    let height= parseInt( inputheight);
-    let area= widgh*height;
-    document.write("area= " + area);
-    let inputmaths;
-    let inputphysical;
-    let inputchemistry;
-    inputmaths=prompt("nhập biến maths:");
-    inputphysical=prompt("nhập biến physical:");
-    inputchemistry=prompt("nhập biến chemistry:");
-    let maths= parseInt(inputmaths);
-    let physical= parseInt(inputphysical);
-    let chemistry=parseInt(inputchemistry);
-    let sum=(maths+physical+chemistry);
-    let medium=(sum/3);
-    document.write("sum =" +sum);
-    document.write("medium =" +medium);
 </script>
 </body>
 </html>
