--- a/js.html
+++ b/js.html
@@ -19,6 +19,7 @@
         let a= +document.getElementById('thuan').value;
         let b= +document.getElementById('hung').value;
         let sum= a+b;
+
         gon.innerHTML=("sum= " +sum);
     }
     function tru() {
@@ -39,56 +40,56 @@
         let thuong = (a/b);
         document.getElementById('p').innerHTML=('thuong= ' +thuong);
     }
-    // a=prompt("nhập biến a: ")
-    // b=prompt("nhập biến b: ")
-    // if((a%b)==0)
-    // { alert("a chia hết cho b")}
-    // else{
-    //     alert("a không chia hết cho b")
-    // }
+    a=prompt("nhập biến a: ")
+    b=prompt("nhập biến b: ")
+    if((a%b)==0)
+    { alert("a chia hết cho b")}
+    else{
+        alert("a không chia hết cho b")
+    }
+    bài 2
+    let inputwidgh;
+    let inputheight;
+    inputwidgh=prompt("nhập biến width:");
+    inputheight=prompt(" nhập biến height:");
+    let widgh=parseInt(inputwidgh);
+    let height= parseInt( inputheight);
+    let area= widgh*height;
+    document.write("area= " + area);
+    bài 3
+    let inputmaths;
+    let inputphysical;
+    let inputchemistry;
+    inputmaths=prompt("nhập biến maths:");
+    inputphysical=prompt("nhập biến physical:");
+    inputchemistry=prompt("nhập biến chemistry:");
+    let maths= parseInt(inputmaths);
+    let physical= parseInt(inputphysical);
+    let chemistry=parseInt(inputchemistry);
+    let sum=(maths+physical+chemistry);
+    let medium=(sum/3);
+    document.write("sum =" +sum);
+    document.write("medium =" +medium);
+
     // bài 2
-    // let inputwidgh;
-    // let inputheight;
-    // inputwidgh=prompt("nhập biến width:");
-    // inputheight=prompt(" nhập biến height:");
-    // let widgh=parseInt(inputwidgh);
-    // let height= parseInt( inputheight);
-    // let area= widgh*height;
-    // document.write("area= " + area);
-    // bài 3
-    // let inputmaths;
-    // let inputphysical;
-    // let inputchemistry;
-    // inputmaths=prompt("nhập biến maths:");
-    // inputphysical=prompt("nhập biến physical:");
-    // inputchemistry=prompt("nhập biến chemistry:");
-    // let maths= parseInt(inputmaths);
-    // let physical= parseInt(inputphysical);
-    // let chemistry=parseInt(inputchemistry);
-    // let sum=(maths+physical+chemistry);
-    // let medium=(sum/3);
-    // document.write("sum =" +sum);
-    // document.write("medium =" +medium);
+    let inputc;
+    inputc=prompt("nhập biến nhiệt độ c");
+    let c=parseInt( inputc);
+    let F=((9*c)/5+32);
+    document.write("F = " +F);
 
-    // // bài 2
-    // let inputc;
-    // inputc=prompt("nhập biến nhiệt độ c");
-    // let c=parseInt( inputc);
-    // let F=((9*c)/5+32);
-    // document.write("F = " +F);
-
-    // bài 3+ 4
-    // let pi=3.14;
-    // let inputD;
-    // let inputR;
-    // inputR=prompt("nhập biến bán kính R");
-    // inputD=prompt("nhập biến đường kính D");
-    // let D=parseInt(inputD);
-    // let R=parseInt(inputR);
-    // let C=3.14*D;
-    // let S=3.14 * R *R;
-    // document.write("S=" +S);
-    // document.write("C= " +C);
+    bài 3+ 4
+    let pi=3.14;
+    let inputD;
+    let inputR;
+    inputR=prompt("nhập biến bán kính R");
+    inputD=prompt("nhập biến đường kính D");
+    let D=parseInt(inputD);
+    let R=parseInt(inputR);
+    let C=3.14*D;
+    let S=3.14 * R *R;
+    document.write("S=" +S);
+    document.write("C= " +C);
 
 </script>
 </body>
